syntax = "proto3";

package api.product.v1;

option go_package = "kratos-admin/api/product/v1;v1";
option java_multiple_files = true;
option java_package = "api.product.v1";

service Product {
	rpc CreateProduct (CreateProductRequest) returns (CreateProductReply);
	rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductReply);
	rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductReply);
	rpc GetProduct (GetProductRequest) returns (GetProductReply);
	rpc ListProduct (ListProductRequest) returns (ListProductReply);
}
message MemberPriceList {
	int64    MemberLevelId = 1;
	float  MemberPrice = 2;
	string    MemberLevelName = 3;
}
message ProductAttributeValueList {
	int64    ProductAttributeId = 1;
	string  AttributeValues = 2;
}
message ProductFullReductionList {
	float  FullPrice = 1;
	float  ReducePrice = 2;
}
message ProductLadderList {
	int64    Count = 2;
	float  Discount = 3;
	float  Price = 4;
}
message SkuStockList {
	string    SkuCode = 1;
	float  Price = 2;
	int64    Stock = 3;
	int64    LowStock = 4;
	string    Pic = 5;
	int64    Sale = 6;
	float  PromotionPrice = 7;
	int64    LockStock = 8;
	string    SpData = 9;
}

message CreateProductRequest {
	repeated int64       ProductCategoryIds = 1;
	int64       BrandId = 2;
	int64       ProductCategoryId = 3;
	int64       FeightTemplateId = 4;
	int64       ProductAttributeCategoryId = 5;
	string      Name = 6;
	string      Pic = 7;
	string      ProductSn = 8;
	int64       DeleteStatus = 9;
	int64       PublishStatus = 10;
	int64       NewStatus = 11;
	int64       RecommandStatus = 12;
	int64       VerifyStatus = 13;
	int64       Sort = 14;
	int64       Sale = 15;
	double     Price = 16;
	double     PromotionPrice = 17;
	int64       GiftGrowth = 18;
	int64       GiftPoint = 19;
	int64       UsePointLimit = 20;
	string      SubTitle = 21;
	string      Description = 22;
	double     OriginalPrice = 23;
	int64       Stock = 24;
	int64       LowStock = 25;
	string      Unit = 26;
	double     Weight = 27;
	int64       PreviewStatus = 28;
	string      ServiceIds = 29;
	string      Keywords = 30;
	string      Note = 31;
	string      AlbumPics = 32;
	string      DetailTitle = 33;
	string      DetailDesc = 34;
	string      DetailHtml = 35;
	string      DetailMobileHtml = 36;
	string   PromotionStartTime = 37;
	string   PromotionEndTime = 38;
	int64       PromotionPerLimit = 39;
	int64       PromotionType = 40;
	string      BrandName = 41;
	string      ProductCategoryName = 42;
	repeated MemberPriceList      MemberPriceList = 43;
	repeated ProductAttributeValueList      ProductAttributeValueList = 44;
	repeated ProductFullReductionList      ProductFullReductionList = 45;
	repeated ProductLadderList      ProductLadderList = 46;
	repeated SkuStockList      SkuStockList = 47;
}
message CreateProductReply {
	int32       ProductId = 1;
}
message UpdateProductRequest {}
message UpdateProductReply {}

message DeleteProductRequest {}
message DeleteProductReply {}

message GetProductRequest {}
message GetProductReply {}

message ListProductRequest {}
message ListProductReply {}